--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/x-icon" href="./assets/Logo.jpg" sizes="100*100" />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
